Fix favicon and scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -17,6 +17,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+main {
+  overflow-y: clip;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -62,11 +66,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-color: #71edb5;
 }
 
 @media (prefers-color-scheme: light) {
